# domain-monitor-mcp

./: .gitignore  CHANGELOG.md  LICENSE  OPS.md  README.md  claude_desktop_config_example.json  pyproject.toml  server.json  server.py
domain_monitor_mcp/: __init__.py  server.py
