[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-monitor-mcp"
version = "0.1.0"
description = "MCP server for domain-monitor.io — query domain expiration data from AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jason Braatz", email = "jasoncbraatz@gmail.com" }
]
keywords = ["mcp", "domain-monitor", "domain", "expiration", "monitoring", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
domain-monitor-mcp = "domain_monitor_mcp.server:main"

[project.urls]
Homepage = "https://github.com/jasoncbraatz/domain-monitor-mcp"
Repository = "https://github.com/jasoncbraatz/domain-monitor-mcp"
Issues = "https://github.com/jasoncbraatz/domain-monitor-mcp/issues"
